[project]
name = "claudemux"
version = "0.1.4"
description = "CLI tool to launch and interact with Claude Code sessions via tmux + iTerm2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools.package-data]
claudemux = ["hooks/*.sh"]

[project.scripts]
claudemux = "claudemux.main:main"
